# ChangeLog for www-apps/389-dsgw
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +389-dsgw-1.1.4.ebuild,
  +files/configure-ac.patch:
  initial commit for testing
