@@ -1,5 +1,7 @@
 AUX configure-ac.patch 690 RMD160 52b48c6798f821c0dff4a7de6c48d182d6c2da53 SHA1 2a3595c6ca7e4bed9adaea4d55fbd6f36000abe1 SHA256 a535c9bd5550df535f65509d9c22d2eb6a692cf20d8200ab47eb474bd254730c
 DIST 389-dsgw-1.1.4.tar.bz2 747757 RMD160 1be7ab1e8b1cfc070ec27ac11524fe2ebef9dfd8 SHA1 52e01146f9b35b46c5deb288806b10624ffff855 SHA256 f75178721045d266877fc813b173859b19fa091af662aba72b1f665ea47362a0
+DIST 389-dsgw-1.1.5.tar.bz2 748496 RMD160 439a93956e15ec83de2fc8490c49291b28853132 SHA1 9ef4a18ddd09a566402f1fd68bef8f774857d680 SHA256 318bb12e17e45abb4a3993c366526a2a6a26774a9668e5201752549727122ddc
 EBUILD 389-dsgw-1.1.4.ebuild 896 RMD160 50c5f48a1ff4ec9e9203c4db89e81336d674cbc1 SHA1 cb49a540cb0703ca4c96b23dd49ba6997c5fc770 SHA256 a8e07feea6bc0c8d7bdf15083f9f42c8c7b73199b7d524dfd82c114812308583
-MISC ChangeLog 254 RMD160 411c99012ba404ad2b257a84b120196d57fde59b SHA1 0a87f01e672c8a799dba5ba7d5b8efa5b969f304 SHA256 75caa67b9fce914341f0acef14cdb0f279fc302dabd635de00fc029dcd13f5e2
+EBUILD 389-dsgw-1.1.5.ebuild 868 RMD160 49aba98bb5b605da7436196bb6c9977352f2665e SHA1 7df99c551b5f9c253ebb6a8560afb5ce603f696e SHA256 51bd6219505d1003244f839bb246b9e0b45a8714ca4b86e6efa941ab6b92419e
+MISC ChangeLog 360 RMD160 9a7c73c5eed9f3c7adcf4b2d678363ca917e4ff2 SHA1 ebb7f2075197fb4e1fa7464c792d756fcae4f5c5 SHA256 fcba801a990a25290fa60a050fef138cec04974276e855c93e338bad8b33d748
 MISC metadata.xml 431 RMD160 56a0086fe1a024375ffb1bf67edabbb07c22e4d9 SHA1 5f75fc74b40aa759f2cc00976aa764d77788ff9e SHA256 b2a09b5361d8d899308069edbf0735a80a0c092291f4ebaf396f90faef740c94
