@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/389-dsgw
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Mar 2010; <slep@gentoo.org> +389-dsgw-1.1.5.ebuild:
+  version bump
+
+*389-dsgw-1.1.5 ( 13 Mar 2010 )
 
   05 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +389-dsgw-1.1.4.ebuild,
   +files/configure-ac.patch:
